Avoid the trick with overflowing panel, update rounded corners.

--- a/static/style/ui.css
+++ b/static/style/ui.css
@@ -2,7 +2,6 @@ html, body {
   width: 100%;
   height: 100%;
   margin: 0;
-  overflow: hidden;
 }
 
 div {
@@ -33,20 +32,19 @@ div {
   position: absolute;
   top: 150px;
   left: 0;
-  bottom: -20px;
+  bottom: 0;
   right: 0;
   overflow: hidden;
   z-index: 1;
 
   background-color: white;
   border: none;
-  /*border-top: solid black 1px;*/
-  border-radius: 20px;
-  -moz-border-radius: 20px;
-  -webkit-border-radius: 20px;
-  box-shadow: 0 0 20px 3px #ccc;
-  -moz-box-shadow: 0 0 20px 3px #ccc;
-  -webkit-box-shadow: 0 0 20px 3px #ccc;
+  border-radius: 20px 20px 0 0;
+  -moz-border-radius: 20px 20px 0 0;
+  -webkit-border-radius: 20px 20px 0 0;
+  box-shadow: 0 0 20px 1px #ccc;
+  -moz-box-shadow: 0 0 20px 1px #ccc;
+  -webkit-box-shadow: 0 0 20px 1px #ccc;
 }
 
 .choice {
@@ -73,6 +71,16 @@ button {
   color: white;
   font-weight: bold;
 }
+.choice-button-first {
+  border-radius: 5px 0 0 5px;
+  -moz-border-radius: 5px 0 0 5px;
+  -webkit-border-radius: 5px 0 0 5px;
+}
+.choice-button-last {
+  border-radius: 0 5px 5px 0;
+  -moz-border-radius: 0 5px 5px 0;
+  -webkit-border-radius: 0 5px 5px 0;
+}
 
 #panel-choice {
   position: absolute;
@@ -81,13 +89,12 @@ button {
   height: 100px;
 
   border: none;
-  /*border-top: solid black 1px;*/
-  border-radius: 20px;
-  -moz-border-radius: 20px;
-  -webkit-border-radius: 20px;
-  box-shadow: 0 0 20px 3px #ccc;
-  -moz-box-shadow: 0 0 20px 3px #ccc;
-  -webkit-box-shadow: 0 0 20px 3px #ccc;
+  border-radius: 20px 20px 0 0;
+  -moz-border-radius: 20px 20px 0 0;
+  -webkit-border-radius: 20px 20px 0 0;
+  box-shadow: 0 0 20px 1px #ccc;
+  -moz-box-shadow: 0 0 20px 1px #ccc;
+  -webkit-box-shadow: 0 0 20px 1px #ccc;
   padding: 15px 2%;
 }
 #panel-choice .choice-button {
@@ -177,9 +184,9 @@ button {
   margin: 0;
   padding: 0;
 
-  box-shadow: 0 0 4px 3px #ccc;
-  -moz-box-shadow: 0 0 4px 3px #ccc;
-  -webkit-box-shadow: 0 0 4px 3px #ccc;
+  box-shadow: 0 0 10px 1px #ccc;
+  -moz-box-shadow: 0 0 10px 1px #ccc;
+  -webkit-box-shadow: 0 0 10px 1px #ccc;
 }
 
 #console-send {
@@ -197,9 +204,9 @@ button {
   margin: 0;
   padding: 0;
 
-  box-shadow: 0 0 4px 3px #ccc;
-  -moz-box-shadow: 0 0 4px 3px #ccc;
-  -webkit-box-shadow: 0 0 4px 3px #ccc;
+  box-shadow: 0 0 10px 1px #ccc;
+  -moz-box-shadow: 0 0 10px 1px #ccc;
+  -webkit-box-shadow: 0 0 10px 1px #ccc;
 }
 #console-send:hover {
   background-color: rgb(250, 120, 250);
